--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
 </head>
 <body>
     <div class="game">
-        <p class="1">1</p>
-        <p class="2">2</p>
-        <p class="3">3</p>
-        <p class="4">4</p>
-        <p class="5">5</p>
-        <p class="6">6</p>
-        <p class="7">7</p>
-        <p class="8">8</p>
-        <p class="9">9</p>
+        <p class="1" data-pos="1"></p>
+        <p class="2" data-pos="2"></p>
+        <p class="3" data-pos="3"></p>
+        <p class="4" data-pos="4"></p>
+        <p class="5" data-pos="5"></p>
+        <p class="6" data-pos="6"></p>
+        <p class="7" data-pos="7"></p>
+        <p class="8" data-pos="8"></p>
+        <p class="9" data-pos="9"></p>
     </div>
 </body>
 </html>
